structural-typing/tests/ui/select_string_literal.stderr
error: Invalid syntax in select!: '"name"'. Expected: field or ?field
  --> tests/ui/select_string_literal.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
11 |     type Invalid = user::select!("name");
   |                    --------------------- in this macro invocation
   |
   = note: this error originates in the macro `user::select` (in Nightly builds, run with -Z macro-backtrace for more info)
